force-app/main/default/objects/npsp__Allocation__c/fields/npsp__Amount__c.field-meta.xml
<CustomField>
    <fullName>npsp__Amount__c</fullName>
    <description>The amount of the Opportunity allocated to this General Accounting Unit. Leave blank for percent-based Allocations.</description>
    <inlineHelpText>Amount of the opportunity to allocate to this general accounting unit. Leave blank for percent based allocations.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>