force-app/main/default/objects/npsp__Allocation__c/fields/npsp__Campaign__c.field-meta.xml
<CustomField>
    <fullName>npsp__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Campaign associated with this Allocation. Use this field if you want new Opportunities associated with this Campaign to be allocated in the same way.</description>
    <inlineHelpText>Optionally attributes allocations to a campaign. All new opportunities created with this campaign as primary campaign source will automatically be allocated in the same way.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>GAU Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>