force-app/main/default/objects/npsp__Allocation__c/fields/npsp__General_Accounting_Unit__c.field-meta.xml
<CustomField>
    <fullName>npsp__General_Accounting_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The General Accounting Unit this Allocation is attributed to. Only General Accounting Units marked as active are available for new Allocations.</description>
    <inlineHelpText>The general accounting unit to attribute this allocation. Only general accounting units marked as active are available for new allocations.</inlineHelpText>
    <label>General Accounting Unit</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <errorMessage>Choose an active General Accounting Unit for this Allocation. You cannot modify an Allocation assigned to an inactive General Accounting Unit.</errorMessage>
        <filterItems>
            <field>npsp__General_Accounting_Unit__c.npsp__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.npsp__Payment__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.npsp__Payment__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <infoMessage>You must select an active General Accounting Unit for this Allocation.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
    <relationshipLabel>GAU Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>