force-app/main/default/objects/npsp__Allocation__c/fields/npsp__Percent__c.field-meta.xml
<CustomField>
    <fullName>npsp__Percent__c</fullName>
    <description>Percent of Opportunity amount allocated to this Allocation&apos;s General Accounting Unit. If you later modify the Opportunity amount, NPSP will update the allocation amount on the General Accounting Unit.</description>
    <inlineHelpText>Percent of opportunity amount to allocate to this general accounting unit. Modifying an opportunity amount of a percent based allocation will modify the allocation amount.</inlineHelpText>
    <label>Percent</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>